--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,3 +1,67 @@
-h1 {
-	padding: 10px 0;
+
+.selected {
+	background-color: #CFD8DC;
+	color: white;
 }
+
+.heroes {
+	margin: 0 0 2em 0;
+	list-style-type: none;
+	padding: 0;
+	width: 25em;
+
+	li {
+		cursor: pointer;
+		position: relative;
+		left: 0;
+		background-color: #EEE;
+		margin: .5em;
+		padding: .3em 0;
+		height: 1.6em;
+		border-radius: 4px;
+	}
+	.selected:hover{
+		background-color: #BBD8DC;
+		color: white;
+	}
+	:hover {
+		color: #607D8B;
+		background-color: #DDD;
+		left: .1em;
+	}
+
+	.text {
+		position: relative;
+		top :-3px;
+	}
+
+	.badge{
+		display: inline-block;
+		font-size: small;
+		min-width: 28px;
+		color: white;
+		padding: 0.8em 0.7em 0 0.7em;
+		background-color: #607D8B;
+		line-height: 1em;
+		position: relative;
+		left: -1px;
+		top: -4px;
+		height: 1.8em;
+		margin-right: .8em;
+		border-radius: 4px 0 0 4px;
+	}
+	.ngo-rate{
+		padding: 0.8em 0.7em 0 0 ;
+		text-align: small;
+		display: inline-block;
+		line-height: 1em;
+		position: relative;
+		left: -1px;
+		top: -4px;
+		height: 1.8em;
+		border-radius: 4px 0 0 4px;
+	}
+}
+
+
+
