--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,19 +1,13 @@
 <h2>つよつよおじさん</h2>
 <ul class="heroes">
-	<li *ngFor="let hero of heroes" [class.selected]="hero == selectedHero" (click)="onSelect(hero)">
-		<span class="badge">{{ spacePadding(hero.id) }}</span> <span class="ngo-rate">{{hero.rate}}</span> <span
+	<li *ngFor="let hero of heroes; let i = index" [class.selected]="hero == selectedHero" (click)="onSelect(hero)">
+		<span class="badge">{{ spacePadding(hero.rank) }}</span> <span class="ngo-rate">{{hero.rate}}</span> <span
 			class="ngo-name">{{hero.name}}</span>
 
 	</li>
 </ul>
 
 <br>
-<div *ngIf="selectedHero">
-	<h2>Selected Heroes : {{selectedHero.name | uppercase}} Details</h2>
-	<div><span>id: </span>{{selectedHero.id}}</div>
-	<div>
-		<label for="name">name:
-			<input [(ngModel)]="selectedHero.name" placeholder="name">
-		</label>
-	</div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+
+<br>
