--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,7 +1,7 @@
 
 .selected {
 	background-color: #CFD8DC;
-	color: white;
+	color: #AAA;
 }
 
 .heroes {
@@ -47,19 +47,29 @@
 		left: -1px;
 		top: -4px;
 		height: 1.8em;
-		margin-right: .8em;
+		margin-right: 0;
 		border-radius: 4px 0 0 4px;
 	}
 	.ngo-rate{
-		padding: 0.8em 0.7em 0 0 ;
-		text-align: small;
+		font-size: small;
 		display: inline-block;
+		color: #fff;
+		padding: 0.8em 0.7em 0 0.7em;
+		background-color: #84acc0;
 		line-height: 1em;
 		position: relative;
 		left: -1px;
 		top: -4px;
 		height: 1.8em;
-		border-radius: 4px 0 0 4px;
+		padding-right: 10px;
+	}
+
+	.ngo-name{
+		margin-left: 5px;
+		display: inline-block;
+		position: relative;
+		line-height: 1em;
+		top: -2px;
 	}
 }
 
