--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<h1 routerLink="/">{{title}}</h1>
+
+<nav>
+	<a routerLink="/dashboard">Dashboard</a>
+	<a routerLink="/heroes">Ojisan Ranking</a>
+</nav>
+
+<router-outlet></router-outlet>
 <app-messages></app-messages>
